--- a/partials/home.html
+++ b/partials/home.html
@@ -1,5 +1,3 @@
-<div ng-controller="homeCtrl as ctrl">
-<span>amount: {{ ctrl.member }}</span>
-<button ng-click="ctrl.inc()">inc</button>
-<button ng-click="ctrl.dec()">dec</button>
+<div ng-controller="ctrl as c">
+	<directive />
 </div>
